根据功能抽离动态依赖库

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="./vendor.dll.js"></script> <!--注意公共模块要放在前面-->
+  <script src="./react.dll.js"></script>
+  <script src="./polyfill.dll.js"></script>  <!--注意依赖的动态链接库文件要放在前面-->
 </body>
 </html>
